# shannon-prime

./: .gitattributes  .gitignore  CLAUDE.md  COPYRIGHT_HEADER.txt  Makefile  README.md  adventures_through_a_10d_manifold.md  kv_cache_is_a_view.md  multiplicative_lattice_combined.md  music_of_the_spheres.md  position_is_arithmetic_v8.md
backends/adreno/: shannon_prime_adreno.c  shannon_prime_adreno.h
backends/beast_canyon/: CMakeLists.txt  sp_avx512_shredder.c  sp_avx512_shredder.h  sp_beast_canyon.c  sp_beast_canyon.h  sp_diagnostics_bc.c  sp_diagnostics_bc.h  sp_hetero_sync.c  sp_hetero_sync.h  sp_optane.c  sp_optane.h  test_beast_canyon.c
backends/crt/: sp_crt.c  sp_crt.h  sp_crt_cuda.cu
backends/cuda/: setup_wan.py  shannon_prime_cuda.cu  shannon_prime_cuda.h  shannon_prime_fp8.cu  shannon_prime_hier.cu  shannon_prime_sqfree.cu  vht2_wan_ext.cpp
backends/freethedsp/: INTEGRATION.md  README.md  build.cmd  discover.c  freethedsp_s22u.c
backends/freethedsp/tools/: find_is_test_enabled.py
backends/halide/: .gitignore  Makefile  build-example.cmd  build-example.ps1  mode_d_isp_probe_design.md  sp_band_dequantize_generator.cpp
backends/halide/probe/sp_dma_raw/: BUILD_NOTES.md  Makefile  README.md  test-sp_dma_raw.cmd
backends/halide/probe/sp_dma_raw/compat/: dmaWrapper.h  dma_def.h
backends/halide/probe/sp_dma_raw/dsp/: print.cpp  sp_dma_raw_run.cpp
backends/halide/probe/sp_dma_raw/halide/: sp_dma_raw_generator.cpp
backends/halide/probe/sp_dma_raw/host/: main.cpp
backends/halide/probe/sp_dma_raw/rpc/: sp_dma_raw.idl
backends/hexagon/: shannon_prime_hexagon.c  shannon_prime_hexagon.h  sp_mem.c  sp_mem.h
backends/hexagon/scaffold/: .gitignore  CMakeLists.txt  README.md  build.cmd
backends/hexagon/scaffold/inc/: sp_hex.idl
backends/hexagon/scaffold/src_app/: sp_hex_ext.c  sp_hex_ext.h  sp_hex_main.c
backends/hexagon/scaffold/src_dsp/: sp_hex_imp.c  sp_hex_kernels.c  sp_hex_kernels.h  sp_hex_kernels_hvx.c  sp_hvx_logits.c
backends/hexagon/scaffold/src_dsp/compat/: dma_types.h  mini_hexagon_dma.h
backends/hexagon/scaffold/src_generated/: README.txt
backends/qnn_aihub/: .gitignore  PHASE2_ONDEVICE_PLAN.md  attention_block.py  qwen3_4b_v69_export.py  submit_attention.py  submit_qwen_shape.py  submit_w4a16.py  v69_workflow.py  wsl_setup.sh
backends/qnn_aihub/artifacts/: PHASE_2_1_RESULT.md  PHASE_2_2_RESULT.md  PHASE_2_3_1_W4A16.md  PHASE_2_4_ARCHITECTURE.md
backends/qnn_aihub/artifacts/qwen3_4b/: qwen3-4b-htp.json
backends/qnn_aihub/sp_qnn_runner/: .gitignore  PHASE_2_3_DESIGN.md  build.cmd  sp_llama_qnn.c  sp_llama_qnn.h  sp_qnn.c  sp_qnn.h  test_sp_llama_qnn_smoke.c  test_sp_qnn.c  test_sp_qnn_chain.c  test_sp_qnn_kq_persistent.c  test_sp_qnn_listload.c  test_sp_qnn_multi.c  test_sp_qnn_prefill_batch.c  test_sp_qnn_residency.c  test_sp_qnn_runtime_matmul.c  test_sp_qnn_visp_sim.c
backends/torch/: shannon_prime_sqfree.py  shannon_prime_torch.py  vht2_cuda_bridge.py
backends/vulkan/: shannon_prime_vulkan.c  shannon_prime_vulkan.h
backends/vulkan/shaders/: band_dequantize.comp  band_quantize.comp  knight_predict.comp  mobius_reorder.comp  vilenkin.comp  wht.comp
core/: shannon_prime.c  shannon_prime.h  shannon_prime_cauchy.c  shannon_prime_modelpack.c  shannon_prime_modelpack.h  shannon_prime_pe.c  shannon_prime_sqfree.c
docs/: ARCHITECTURE.md  BACKEND-ADRENO.md  BACKEND-CUDA.md  BACKEND-HEXAGON.md  BACKEND-TORCH.md  BACKEND-VULKAN.md  BACKENDS.md  BENCH-SPEC-DECODE.md  CAUCHY-RESET.md  COMPRESSION-FEATURES.md  DISK-TIER-ARCHITECTURE.md  INTEGRATION-COMFYUI.md  INTEGRATION-LLAMA.md  MATHEMATICAL-FOUNDATIONS.md  MODALITY-AUDIO.md  MODALITY-IMAGE.md  MODALITY-VIDEO.md  MODEL-PACK-CALIBRATION.md  MODEL-PACK.md  MODELS-AND-HARDWARE.md  PHASE-3-ATTENTION-DESIGN.md  PRIME-ENGINE.md  QUICKSTART.md  SPECULATIVE-DECODING-HEXAGON.md  SPECULATIVE-DECODING.md  Shannon-Prime.md  TESTING.md  TOOLS.md
logs/: android_adreno_status.json  android_adreno_v107.json  auto_bands_qwen3.json  auto_bands_qwen3_vilenkin.json  cuda_dolphin1b_baseline.json  cuda_dolphin1b_ship.json  cuda_dolphin1b_sqfree.json  cuda_qwen3_baseline.json  cuda_qwen3_ship.json  cuda_qwen3_sqfree.json  cuda_qwen3_sqfree_10band_2.json  cuda_qwen3_sqfree_10band_3.json  cuda_qwen3_sqfree_10band_auto.json  cuda_qwen3_v2_summary.json  predictor_injector_summary.json  qwen3_paper_54445_c32.json  qwen3_sqfree_mobius_composition.json  test_summary.json  vulkan_diagnostic_v1.03.json
logs/phase12/: diag_dolphin1b.json  diag_gemma4_31b.json  diag_gemma4_split.json  diag_phi3mini.json  diag_qwen36_27b.json  diag_qwen36_35b_moe.json  diag_qwen36_35b_moe_split.json  diag_qwen3_8b_q3.json  diag_qwen3_8b_q8.json  diag_wan_self_step20.json  verify_gl.py  verify_kdiff.py  wan_blockskip_flicker_test.json  wan_rope_split.py  wan_self_extract_workflow.json  wan_sigma_sweep.py
scripts/: bench_android_adreno.sh  bench_cuda_nonpow2.sh  bench_cuda_qwen3.sh  bench_predictor_injector.sh  build_test_cuda.bat  update_readme_from_logs.py
tests/: test_adreno.c  test_comfyui.py  test_core.c  test_cuda.c  test_cuda_advanced.c  test_integration.c  test_modelpack.c  test_sqfree.py  test_torch.py  test_vulkan.c  test_vulkan_dualgpu.c
tests/unified/: __init__.py  report_gen.py  run_tests.py  shannon_prime_test_suite.ipynb  test_audio_integration.py  test_comfyui_integration.py  test_compression_quality.py  test_cross_system.py  test_flux_integration.py  test_hardware_matrix.py  test_math_invariants.py
tools/: benchmark_ab.sh  extract_kv.py  shannon_prime_comfyui.py  shannon_prime_comfyui_sqfree.py  shannon_prime_llama.c  shannon_prime_llama_sqfree.c  sp_auto_bands.py  sp_benchmark.py  sp_chord_diagnostic.py  sp_compress.py  sp_compress_model.py  sp_diagnostics.py  sp_hierarchical_skeleton.py  sp_inject_freqs.py  sp_regime_analysis.py  sp_scaling_law.py
